rimanente l'aside da finire

--- a/index.html
+++ b/index.html
@@ -9,6 +9,157 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <div id="contenitore-tutto">
+        <section id="contenitore-top">
+            <!-- navigation a sinistra -->
+            <aside class="left-side">
+                <div id="aside-top">
+                    <a href="#">
+                        <img src="./assets/img/logo-small.svg" alt="">
+                        <img src="./assets/img/home.svg" alt="">
+                        <img src="./assets/img/search.svg" alt="">
+                        <img src="./assets/img/libreria.svg" alt="">
+                    </a>
+                </div>
+                <div id="aside-bottom">
+                    <img src="./assets/img/download.svg" alt="">
+                    <img src="./assets/img/profile.svg" alt="">
+                </div>
+            </aside>
+            <!-- tutti gli album centrali -->
+            <main class="right-side">
+                <!-- upgrade -->
+                <div id="upgrade">
+                    <a class="btn" href="#">effetua l'upgrade</a>
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a class="active" href="#">IN EVIDENZA</a>
+                        </li>
+                        <li>
+                            <a href="#">PODCAST</a>
+                        </li>
+                        <li>
+                            <a href="#">CLASSIFICHE</a>
+                        </li>
+                        <li>
+                            <a href="#">GENERI E MOOD</a>
+                        </li>
+                        <li>
+                            <a href="#">NUOVE USCITE</a>
+                        </li>
+                        <li>
+                            <a href="#">SCOPRI</a>
+                        </li>
+                    </ul>
+                </nav>
+                <section id="recently-played">
+                    <h2>recently played</h2>
+                    <div class="albums">
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                    </div>
+
+                    <h2>Creato per John Doe</h2>
+                    <h5>Più ascolti, più accurati sarano isuggerimenti</h5>
+                    <div class="albums">
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                    </div>
+
+                    <h2>Artisti Più popolari</h2>
+                    <h5>Più ascolti, più accurati sarano isuggerimenti</h5>
+                    <div class="albums" id="popular-artists">
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                        <div class="album">
+                            <img src="./assets/img/mixdaily.jpeg" alt="">
+                            <h4>Titolo</h4>
+                            <h6>sottotitolo</h6>
+                        </div>
+                    </div>
+
+                </section>
+            </main>
+        </section>
+
+        <!-- footer con comadi audio -->
+        <section id="contenitore-bottom">
+            <div id="bottom-col-left">
+                <img src="./assets/img/metal_lifting.jpg" alt="">
+                <div id="bottom-info-brano">
+                    <span><strong>Sinister</strong></span>
+                    <span>Nome</span>
+                    <span>Brano</span>
+                </div>
+            </div>
+            <div id="bottom-col-center">
+                <div id="bottom-center-controllers">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="fa-solid fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div id="bottom-center-time">
+                    <span>0:0</span>
+                    <div class="time-bg">
+                        <div class="time"></div>
+                    </div>
+                    <span>4:0</span>
+                </div>
+            </div>
+            <div id="bottom-col-right">
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-regular fa-volume"></i>
+                <div class="time-bg">
+                    <div class="time"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+   
 </body>
 </html>
